Fix radius underline bug on mobile

--- a/_sass/style.sass
+++ b/_sass/style.sass
@@ -163,8 +163,11 @@ input
   margin-bottom: 1em
   outline: none
   padding: 1em 0
-  &[type=email],
+  &[type=email]
     border-bottom: 2px solid black
+    -webkit-appearance: none
+    -webkit-border-radius: 0
+    border-radius: 0
     margin-top: 3em
   &[type=submit]
     cursor: pointer
